# HPC-Spring-2026

./: .clang-format  .gitignore  CMakeLists.txt
common/: csv_writer.h  cuda_utils.h  format_utils.h  math_utils.h  random_utils.h
lab1-matmul/: CMakeLists.txt  README.md  lab1_matmul_results.csv
lab1-matmul/src/: main.cpp  matmul.h  matmul_cpu.cpp  matmul_gpu.cu  test.cpp
lab2-vectorsum/: CMakeLists.txt  README.md  vectorsum.csv
lab2-vectorsum/src/: main.cpp  test.cpp  vectorsum.h  vectorsum_cpu.cpp  vectorsum_gpu.cu
lab3-raytracer/: CMakeLists.txt  readme.md
lab3-raytracer/scenes/showcase/: showcase.mtl
lab3-raytracer/src/: bmp_utils.cpp  bmp_utils.h  camera.h  camera_options.h  cuda_renderer.cuh  geometry.h  intersection.h  light.h  main.cpp  main.cu  material.h  random_scene.cpp  random_scene.h  ray.h  render_options.h  scene.h  scene_io.cpp  scene_io.h  test.cpp  test.cu  vector.h
